add the AI and references part

--- a/Article/RTP-HW4-02-02.tex
+++ b/Article/RTP-HW4-02-02.tex
@@ -306,6 +306,37 @@
 \end{figure}
 
 \end{itemize}
+
+\section{معماری‌‌های مختلف}
+\vskip 0.4 true cm
+
+\section{معماری کامپیوتر در آینده}
+\vskip 0.4 true cm
+
+\section{هوش مصنوعی و معماری کامپیوتر}
+\vskip 0.4 true cm
+
+در دهه‌های ۸۰ و ۹۰ میلادی، کامپیوترها هر ۱۸ ماه دو برابر سریع‌تر می‌شدند. این بدان معنا بود که اگر شما یک کامپیوتر می‌خریدید و دوستتان یک سال بعد از شما یک کامپیوتر جدیدتر می‌خرید، کامپیوتر دوستتان بسیار سریع‌تر بود. مهندسان و مردم به این سرعت پیشرفت کامپیوترها عادت کرده بودند.
+
+اما امروزه، در معماری کامپیوتر، می‌دانیم که تنها راه پیشرفت، افزودن شتاب‌دهنده‌هایی است که فقط برای یک کاربرد خاص خوب کار می‌کنند. برای مثال، پردازنده‌های گرافیکی\LTRfootnote{\lr{GPU}} برای انجام محاسبات گرافیکی بسیار کارآمد هستند. آنها می‌توانند میلیون‌ها ضرب ماتریس را در هر ثانیه انجام دهند، که برای کارهایی مانند رندرینگ \lr{3D} و بازی‌های ویدئویی ضروری است.
+
+با کند شدن قانون مور، دیگر انتظار نمی‌رود که کامپیوترهای همه منظوره سریع‌تر شوند. این به این دلیل است که قانون مور، که بیان می‌کند تعداد ترانزیستورها در یک میکروچیپ هر دو سال دو برابر می‌شود، در حال کند شدن است. این به این دلیل است که ساخت ترانزیستورهای کوچکتر و کوچکتر چالش برانگیزتر می‌شود.
+
+با این حال، مردم همچنان به دنبال راه‌هایی برای بهبود عملکرد کامپیوترهای خود هستند. یکی از راه‌ها افزودن شتاب‌دهنده‌هایی است که فقط برای یک کاربرد خاص خوب کار می‌کنند.
+
+به طور اتفاقی، همزمان با این وقایع، یک انقلاب در هوش مصنوعی به نام یادگیری ماشین رخ داده است. یادگیری ماشین بر ضرب ماتریس متکی است. برای مثال، شبکه‌های عصبی مصنوعی \lr{(ANN)} از ضرب ماتریس برای یادگیری الگوها در داده‌ها استفاده می‌کنند.
+
+واحد پردازش تنسور \lr{(TPU)} یک نوع شتاب‌دهنده یادگیری ماشین است که توسط گوگل طراحی شده است. \lr{TPU}ها برای انجام ضرب ماتریس بسیار کارآمد هستند، که برای کارهایی مانند آموزش شبکه‌های عصبی مصنوعی \lr{(ANN)} ضروری است.
+
+\begin{thebibliography}{99}%
+\begin{LTRbibitems}
+\resetlatinfont
+
+\bibitem{Aho}
+A. V. Aho. \emph{Compilers: Principles, Techniques, \& Tools}. Pearson/Addison Wesley, 2007.
+\end{LTRbibitems}
+\end{thebibliography}
+
 %------------------------------------------------------------------------------------------------
 %نوشتن بیوگرافی نویسندگان الزامی می باشد.
 
