add the diff archs

--- a/Article/RTP-HW4-02-02.tex
+++ b/Article/RTP-HW4-02-02.tex
@@ -310,6 +310,72 @@
 \section{معماری‌‌های مختلف}
 \vskip 0.4 true cm
 
+دو معماری بسیار معروف در بازار کامپیوتر، معماری‌های 
+\lr{x86}
+و 
+\lr{arm}
+هستند که در ادامه به بررسی این دو معماری می‌پردازیم.
+
+\begin{itemize}
+\item معماری \lr{x86}
+
+در سال ۱۹۷۲ شرکت 
+\lr{Intel}
+معماری 
+\lr{Intel 8008}
+را معرفی کرد. در تصویر
+\ref{fig:8008}
+یکی از پردازنده‌های اولیه ساخته بر پایه این معماری را مشاهده می‌کنید.
+
+\begin{figure}[b]
+\begin{center}
+\includegraphics[width=0.5\textwidth, height=0.3\textheight]{images/8008}
+\end{center}
+\caption{یک نوع پردازنده \lr{Intel C8008-1} با سرامیکی بنفش، درب و پین‌های فلزی با روکش طلا.}
+\label{fig:8008}
+\end{figure}
+پس از آن، شرکت اینتل معماری‌های دیگری به نام‌های 
+\lr{Intel 8088}،
+\lr{Intel 16-bit 8086}،
+\lr{Intel 80186}،
+\lr{Intel 80286}
+و... معرفی کرد و این سری معماری 
+\lr{x86}
+نام گرفتند. در واقع تمامی پردازنده‌های کنونی همگی بر پایه‌ی این معماری نوشته شده‌اند و کد‌‌هایی که برای آن پردازنده‌های در آن سال‌ها نوشته شده‌اند را می‌توان کامپایل و روی جدیدترین پردازنده‌های کنونی اجرا کرد.
+
+پردازنده‌های شرکت‌های 
+\lr{Intel}
+و 
+\lr{AMD}
+همگی برپایه‌ی این معماری ساخته می‌شوند.
+\item معماری \lr{arm}
+
+نام این معماری برگرفته از 
+\lr{\textbf{A}dvanced \textbf{R}ISC \textbf{M}achines}
+که قبل‌تر از 
+\lr{\textbf{A}corn \textbf{R}ISC \textbf{M}achines}
+گرفته شده‌ بود، است.
+
+پردازنده‌های آرم، به دلیل
+\begin{itemize}
+\item 
+قیمت ارزان،
+\item 
+مصرف انرژی کم و
+\item 
+تولید گرمای کم
+\end{itemize}
+برای دستگاه‌های سبک و دارای باتری مثل تلفن‌‌های هوشمند و لپ‌تاپ‌ها بسیار مناسب هستند.
+
+البته پردازنده‌های آرم پردازنده‌های ضعیفی نیستند و بین سال‌‌های ۲۰۲۰ تا ۲۰۲۲ سریع‌ترین سوپرکامپیوتر دنیا 
+\lr{(Fugako)}
+هم از پردازنده‌های معماری آرم استفاده می‌کرد.
+
+شرکت 
+\lr{Apple}
+هم چیپ‌های سری \lr{M} را برپایه معماری آرم طراحی و تولید می‌کند.
+\end{itemize}
+
 \section{معماری کامپیوتر در آینده}
 \vskip 0.4 true cm
 
