fix the second section

--- a/term/report.tex
+++ b/term/report.tex
@@ -83,10 +83,17 @@
 \hline
 \step &
 آنلاین &
-۶ و ۷ &
+۶&
 \lr{lms} &
 \dateof{شنبه}{13}{8}&
-\hourof{16}{18} \\
+\hourof{16}{17} \\
+\hline
+\step &
+آنلاین &
+۷&
+\lr{lms}&
+\dateof{شنبه}{۱۳}{۸}&
+\hourof{۱۷}{۱۸} \\
 \hline
 \step &
 آنلاین &
@@ -97,10 +104,17 @@
 \hline
 \step &
 آنلاین &
-۸ و ۹ &
+۸&
 \lr{lms} &
 \dateof{شنبه}{20}{8}&
-\hourof{16}{18} \\
+\hourof{16}{17} \\
+\hline
+\step &
+آنلاین &
+9&
+\lr{lms} &
+\dateof{شنبه}{20}{8}&
+\hourof{17}{18} \\
 \hline
 \step &
 حضوری &
