add the last part

--- a/Article/RTP-HW4-02-02.tex
+++ b/Article/RTP-HW4-02-02.tex
@@ -378,7 +378,44 @@
 
 \section{معماری کامپیوتر در آینده}
 \vskip 0.4 true cm
+معماری کامپیوتر در آینده بر اساس نیاز‌های فعلی ما ایجاد خواهد شد.
 
+برخی از نیاز‌های اساسی ما در حوزه‌های زیر می‌باشد:
+\begin{itemize}
+\item هوش مصنوعی و یادگیری ماشین
+
+به عنوان مثال می‌توان به نیاز حسگر‌های قدرتمندتری که دیتا‌های متنوع‌تر و با کیفیت‌تری را دریافت و پردازش کنند اشاره کرد
+
+\item پردازش داده‌های کلان
+
+مغز ما حجم بسیاری از داده‌ها را پردازش می‌کند که نیازمند ساختار پیشرفته‌ای برای مدیریت و پردازش این حجم از داده است. ساختار نورون‌های مغز به شیوه‌ایست که در عین انتقال اطلاعات و فعالیت به عنوان انتقال دهنده‌ی اطلاعات، مسئول ذخیره‌سازی و پردازش اطلاعات نیز هست. الگو برداری از این مدل می‌تواند منجر به ایجاد معماری‌های جدیدی در آینده‌ی نه چندان دور شود.
+
+\item محاسبات کوانتومی
+
+با پیشرفت فناوری کوانتومی، کامپیوترهای کوانتومی قادر به انجام محاسبات با سرعت و کارای بسیار بالا در پردازش داده‌های پیچیده خواهند بود.
+
+\item محاسبات نوروفورمیک
+
+منظور از محاسبات نوروفورمیک، محاسباتی مشابه ساختار مغز انسان است. معماری‌ای که در پردازش موازی قدرتمند بوده و انعطاف‌پذیر است و در عین حال در مصرف انرژی بهینگی بالایی دارد.
+\end{itemize}
+
+\textbf{معماری کوانتومی}
+
+این معماری از ساختار‌های کلاسیک بیتی پیروی نکرده و به جای آن، از مفهومی تحت عنوان کیوبیت پیروی می‌کند.
+
+این مفهوم دارای پیچیدگی‌های بیشتری نسبت به ساختار بیتی است. به صورت ساده‌ می‌توان کیوبیت را بیتی در نظر گرفت که در آنِ واحد هم آبی رنگ است و هم قرمز رنگ!
+
+در نتیجه با این معماری می‌توان به دستاورد‌های زیر اشاره کرد:
+\begin{enumerate}
+\item
+سرعت بالا در حل مسائل پیچیده
+\item 
+توانایی محاسبات مختلف به صورت موازی و همزمان
+\item 
+دسترسی به رمزنگاری و امنیت بالاتر
+\item 
+فناوری‌های نوروفورمیک
+\end{enumerate}
 \section{هوش مصنوعی و معماری کامپیوتر}
 \vskip 0.4 true cm
 
@@ -410,24 +447,29 @@ A. V. Aho. \emph{Compilers: Principles, Techniques, \& Tools}. Pearson/Addison W
 \bigskip 
 
 \noindent \rule{.4\linewidth}{0.8pt}\\
-\noindent\footnotesize{\bfseries نام و نام خانوادگی نویسنده اول} \\
-\footnotesize{اصفهان، خيابان هزار جريب، دانشگاه اصفهان، گروه ریاضی } \\
-abc@yahoo.com\\\\
-\begin{tabular}{p{2 cm} p{14 cm} }
-\includegraphics[width=20mm]{Image1} 
-&\vspace{-1.5cm}
+\noindent\footnotesize{\bfseries خدیجه نظری} \\
+\begin{tabular}{p{14 cm}}
 \footnotesize
-
-نویسنده اول (یا مترجم) متولد مهرماه ماه 1361 در شهر اصفهان است. وی در سال 1380 وارد مقطع كارشناسی رشته رياضی محض دانشگاه اصفهان شد و در سال 1385 وارد مقطع كارشناسی ارشد رشته رياضی محض شد.\\
+ورودی ۱۴۰۰ مهندسی کامپیوتر دانشگاه اصفهان
 \end{tabular}\\\\
-\noindent\footnotesize{\bfseries نام و نام خانوادگی نویسنده دوم } \\
-\footnotesize{تهران، دانشگاه تهران، گروه ریاضی } \\
- def@gmail.com\\\\
-\begin{tabular}{p{2 cm} p{14 cm} }
-\includegraphics[width=20mm]{Image2} 
-&\vspace{-1.5cm}
+\noindent\footnotesize{\bfseries فاطمه علی‌ملکی} \\
+\begin{tabular}{p{14 cm}}
 \footnotesize
-
-نویسنده دوم متولد مرداد ماه 1368 در شهر تهران است. وی در سال 1386 وارد مقطع كارشناسی رشته رياضی كاربردی دانشگاه تهران شد و در سال 1390  وارد مقطع كارشناسی ارشد رشته رياضی كاربردی شد.
+ورودی ۱۴۰۰ مهندسی کامپیوتر دانشگاه اصفهان
+\end{tabular}\\\\
+\noindent\footnotesize{\bfseries مهدی‌ حق‌وردی} \\
+\begin{tabular}{p{14 cm}}
+\footnotesize
+ورودی ۱۴۰۰ مهندسی کامپیوتر دانشگاه اصفهان
+\end{tabular}\\\\
+\noindent\footnotesize{\bfseries امیررضا جهانگیری} \\
+\begin{tabular}{p{14 cm}}
+\footnotesize
+ورودی ۱۴۰۰ مهندسی کامپیوتر دانشگاه اصفهان
+\end{tabular}\\\\
+\noindent\footnotesize{\bfseries محمدحسین چهکندی} \\
+\begin{tabular}{p{14 cm}}
+\footnotesize
+ورودی ۱۴۰۰ مهندسی کامپیوتر دانشگاه اصفهان
 \end{tabular}
 \end{document}
